--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,51 @@
-# Python
+# =============================================================================
+# SECURITY & ENVIRONMENT VARIABLES
+# =============================================================================
+# Environment variables - NEVER commit these
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+.env.staging
+.env.staging.local
+.env.*.local
+
+# API Keys and Secrets
+*.key
+*.pem
+*.p12
+*.pfx
+*.crt
+*.cert
+secrets.json
+secrets.yaml
+secrets.yml
+config/secrets.json
+config/secrets.yaml
+config/secrets.yml
+
+# Database credentials
+database.yml
+db.yml
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+
+# =============================================================================
+# PYTHON
+# =============================================================================
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -107,7 +150,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# Node.js / JavaScript
+# =============================================================================
+# NODE.JS / JAVASCRIPT / TYPESCRIPT
+# =============================================================================
+# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -217,14 +263,46 @@ public
 .yarn/install-state.gz
 .pnp.*
 
-# IDEs
+# =============================================================================
+# IDEs & EDITORS
+# =============================================================================
+# VSCode
 .vscode/
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+*.code-workspace
+
+# IntelliJ IDEA
 .idea/
+*.iml
+*.ipr
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
 *.swp
 *.swo
 *~
 
-# Operating System Files
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# =============================================================================
+# OPERATING SYSTEMS
+# =============================================================================
+# macOS
 .DS_Store
 .DS_Store?
 ._*
@@ -232,24 +310,10 @@ public
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Windows
-*.lnk
-
-# Linux
-*~
-
-# macOS
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
 Icon
-
-# Thumbnails
 ._*
-
-# Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
@@ -257,37 +321,129 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
 Temporary Items
 .apdisk
 
+# Windows
+*.lnk
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# =============================================================================
+# LOGS & TEMPORARY FILES
+# =============================================================================
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
 # Temporary files
 *.tmp
 *.temp
-
-# Database files
-*.db
-*.sqlite
-*.sqlite3
+*.swp
+*.swo
+*~
 
 # Backup files
 *.bak
 *.backup
+*.old
+*.orig
+*.save
 
-# Compressed files
+# =============================================================================
+# COMPRESSED FILES
+# =============================================================================
 *.zip
 *.tar.gz
 *.rar
+*.7z
+*.bz2
+*.gz
+*.xz
 
-# Project specific
+# =============================================================================
+# DATABASE FILES
+# =============================================================================
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+*.sql
+*.dump
+
+# =============================================================================
+# CLOUD & DEPLOYMENT
+# =============================================================================
+# AWS
+.aws/
+aws.json
+aws.yml
+aws.yaml
+
+# Google Cloud
+.gcloud/
+service-account-key.json
+*.json.key
+
+# Azure
+.azure/
+azure-credentials.json
+
+# Docker
+.dockerignore
+Dockerfile.local
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# Kubernetes
+*.kubeconfig
+kubeconfig
+.kube/
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# =============================================================================
+# MONITORING & ANALYTICS
+# =============================================================================
+# Sentry
+.sentryclirc
+
+# Analytics
+analytics.json
+analytics.yml
+analytics.yaml
+
+# =============================================================================
+# PROJECT SPECIFIC
+# =============================================================================
+# Your existing project-specific ignores
 GEMINI.md
 .project_config
 .project_config/
@@ -301,4 +457,66 @@ settings.local.*
 temp_commit_message.txt
 v0.md
 test_api.py
-.gitignore
+
+# =============================================================================
+# ADDITIONAL SECURITY
+# =============================================================================
+# SSH keys
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+*.pem
+*.key
+
+# GPG keys
+*.gpg
+*.asc
+
+# Certificates
+*.crt
+*.cert
+*.p12
+*.pfx
+
+# Configuration files with secrets
+config.json
+config.yml
+config.yaml
+settings.json
+settings.yml
+settings.yaml
+
+# Local development files
+local.*
+dev.*
+development.*
+
+# =============================================================================
+# TESTING & QUALITY ASSURANCE
+# =============================================================================
+# Test results
+test-results/
+coverage/
+.nyc_output/
+junit.xml
+test-report.xml
+
+# Performance testing
+lighthouse-report.json
+lighthouse-report.html
+
+# =============================================================================
+# BUILD & DEPLOYMENT ARTIFACTS
+# =============================================================================
+# Build outputs
+build/
+dist/
+out/
+.next/
+.nuxt/
+.vuepress/dist/
+
+# Deployment
+.deploy/
+deploy/
