--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "rootDirectory": "frontend"
+  "installCommand": "npm install"
 } 
