Fix build issues: exclude Prompts/Project/api directories and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -450,6 +450,9 @@ GEMINI.md
 repomix-output.xml
 Foresight.xml
 Prompts/
+Project/
+api/
+__pycache__/
 
 # Local configuration files
 config.local.*
