--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,5 @@
-requests
-python-dotenv
-flask
-Flask-Cors
+requests==2.31.0
+python-dotenv==1.0.0
+flask==3.0.0
+Flask-Cors==4.0.0
+gunicorn==21.2.0
